--- a/Chinese_Traditional.lng
+++ b/Chinese_Traditional.lng
@@ -1,7 +1,7 @@
 |~LANGUAGENAME|
 |繁體中文(臺灣)|
 |~LANGUAGEVERSION|
-|1.25 - 1|
+|1.26 - 1|
 |~LANGUAGEAUTHOR|
 |高祥元 (Kao Shiang-Yuan)|
 |~LANGUAGEAUTHOREMAIL|
@@ -1322,8 +1322,16 @@
 |只在主視窗縮到最小時顯示於工具列|
 |recommended|
 |建議|
-|About KeePass...|
-|關於KeePass...|
+|Are you sure you want to attempt to repair a database file?|
+|您確定要試圖修復資料庫檔案？|
+|In repair mode, the integrity of the data is not checked (in order to rescue as much data as possible). When no integrity checks are performed, corrupted/malicious data might be incorporated into the database.|
+|為了盡可能救回資料，修復模式不檢查資料正確性。因此，資料庫中可能摻雜損毀或錯誤的資料。|
+|Thus the repair functionality should only be used when there really is no other solution. If you use it, afterwards you should thoroughly check your whole database for corrupted/malicious data.|
+|因此，只在沒有其他方法時才修復。如果您修復資料庫，您必須全面檢查資料庫中損毀與錯誤的資料。|
+|Warning|
+|警告|
+|About KeePass|
+|關於KeePass|
 |Version|
 |版本|
 |KeePass is OSI Certified Open Source Software.|
