--- a/Spanish.lng
+++ b/Spanish.lng
@@ -1,5 +1,5 @@
 ﻿|~LANGUAGENAME||Spanish (Español para España y Latinoamérica)|
-|~LANGUAGEVERSION||1.25|
+|~LANGUAGEVERSION||1.26|
 |~LANGUAGEAUTHOR||Marcel Trujillo|
 |~LANGUAGEAUTHOREMAIL||badseed@users.sourceforge.net|
 |- Arcfour crypto routine||- Rutina de criptografia Arcfour|
@@ -101,7 +101,7 @@
 |Abort the current operation.||Suspender la operación actual.|
 |About &Plugin...||Acerca del &Com&plemento|
 |About &Translation...||Acerca de la &traducción...|
-|About KeePass...||Acerca de KeePass...|
+|About KeePass||Acerca de KeePass|
 |Acknowledgements||Reconocimientos|
 |Add &Group...||Añadir &grupo...|
 |Add Entry||Añadir entrada|
@@ -669,3 +669,7 @@
 |Quick search (toolbar)||Búsqueda rápida (barra de herramientas)|
 |Show tray icon only if main window has been sent to tray||Mostrar el icono en el área de notificación sólo si la ventana principal ha sido enviada allí|
 |recommended||recomendado|
+|Are you sure you want to attempt to repair a database file?||¿Está seguro que desea intentar reparar un archivo de base de datos?|
+|In repair mode, the integrity of the data is not checked (in order to rescue as much data as possible). When no integrity checks are performed, corrupted/malicious data might be incorporated into the database.||En modo de reparación la integridad de la información no es verificada (esto a fin de recuperar la mayor cantidad de información posible). Cuando no se realizan comprobaciones de integridad, información dañada o maliciosa puede terminar siendo incorporada a la base de datos.|
+|Thus the repair functionality should only be used when there really is no other solution. If you use it, afterwards you should thoroughly check your whole database for corrupted/malicious data.||Por consiguiente, la opción de reparar debería ser utilizada solo cuando no quedan más alternativas. Si la emplea, usted después debería verificar minuciosamente la base de datos en busca de información dañada o maliciosa.|
+|Warning||Advertencia|
