--- a/Chinese_Simplified.lng
+++ b/Chinese_Simplified.lng
@@ -1,7 +1,7 @@
-﻿2012-01-25 01:25|~LANGUAGENAME|
+﻿2013-07-17 01:26|~LANGUAGENAME|
 |简体中文|
 |~LANGUAGEVERSION|
-|1.25|
+|1.26|
 |~LANGUAGEAUTHOR|
 |Leo Dou @ CCF|
 |~LANGUAGEAUTHOREMAIL|
@@ -50,8 +50,8 @@
 |查找(&F)|
 |Find a string in the password list.|
 |在密码列表中查找一个字串|
-|About KeePass...|
-|关于 KeePass...|
+|About KeePass|
+|关于 KeePass|
 |Password Groups|
 |密码群组|
 |Title|
@@ -287,7 +287,7 @@
 |&Database Settings...|
 |数据库设置(&D)...|
 |&Tray/Untray|
-|收缩至托盘/显示窗口(&T)|
+|缩至托盘/显示窗口(&T)|
 |Version|
 |版本 |
 |Password and repeated password aren't identical!|
@@ -921,11 +921,11 @@
 |Use alternative auto-type method (minimize window)|
 |使用不同于默认（后台窗口）的自动输入模式（最小化窗口）|
 |Quick search (toolbar)|
-|快速搜索（工具栏）|
+|快速查找（工具栏）|
 |Include backup entries in quick searches|
-|快速搜索时包含备份记录|
+|快速查找时包含备份记录|
 |Include expired entries in quick searches|
-|快速搜索时包含失效记录|
+|快速查找时包含失效记录|
 |Delete all backup entries before saving the database|
 |保存数据前删除所有备份记录|
 |&Repair KeePass Database File...|
@@ -1327,14 +1327,23 @@
 |Show tray icon only if main window has been sent to tray|
 |托盘图标仅在主窗口被发送至托盘时才显示|
 |KeePass can automatically check for updates on each program start.|
-|KeePass可在每次程序启动时自动检查升级。|
+|KeePass 可在每次程序启动时自动检查更新|
 |Automatic update checks are performed unintrusively in the background. A notification is only displayed when an update is available. Updates are not downloaded or installed automatically.|
-|自动升级检查在后台执行。仅在有可用升级时显示提醒。不自动下载和安装升级。|
+|自动更新检查在后台执行，仅当有可用更新时提示。不自动下载或安装更新。|
 |No personal information is sent to the KeePass web server. KeePass just downloads a small version information file and compares the available version with the installed version.|
-|在检查过程中不会发送私人信息至KeePass网络服务器，仅仅是下载一个很小的版本信息文件用来与已安装版本进行比对。|
+|在检查过程中不会发送任何私人信息至KeePass网络服务器，仅仅是下载一个很小的版本信息文件用来
+与已安装版本进行比对。|
 |Enable automatic update check?|
-|启用自动升级检查？|
+|启用自动更新检查？|
 |recommended|
 |推荐|
 |Database files cannot be used as key files.|
-|数据文件无法被用作密匙文件。|
+|数据文件不能被用作密匙文件。|
+|Warning|
+|警告|
+|In repair mode, the integrity of the data is not checked (in order to rescue as much data as possible). When no integrity checks are performed, corrupted/malicious data might be incorporated into the database.|
+|修复模式下不检查数据的完整性（以最大限度的恢复数据）。在不检查数据完整性的情况下，被损坏的数据可能会被合并到数据库中|
+|Thus the repair functionality should only be used when there really is no other solution. If you use it, afterwards you should thoroughly check your whole database for corrupted/malicious data.|
+|因此修复功能应在确实没有其它解决办法的时候才使用。如果你使用了这个功能，稍候你应该检查整个数据库来排查损坏的数据。|
+|Are you sure you want to attempt to repair a database file?|
+|你确定想要修复一个数据文件吗？|
