--- a/Hungarian.lng
+++ b/Hungarian.lng
@@ -1,15 +1,15 @@
 ﻿|~LANGUAGENAME|
 |Magyar|
 |~LANGUAGEVERSION|
-|1.28|
+|1.29|
 |~LANGUAGEAUTHOR|
 |herka (1.13) • Zotius (1.18 verziótól)|
 |~LANGUAGEAUTHOREMAIL|
 |herka0@gmail.com • zotius@t-online.hu|
-|&OK|
-|&Rendben|
-|&Cancel|
-|&Mégsem|
+|OK|
+|Rendben|
+|Select &Password Font|
+|Válassz &Jelszó betűtípust|
 |&Generate Random Password|
 |&Véletlen jelszó generálása|
 |Choose an icon.|
